# mira

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-gpu.txt  requirements.txt
.github/workflows/: ci.yml
configs/: app.env.example  stack.env
deploy/compose/: docker-compose.backend.yml
deploy/docker/: Dockerfile.api  Dockerfile.proxy
docs/: architecture.md  deployment.md  governance.md  reference_audit_llm_stack.md  troubleshooting.md
docs/get-started/: get-started-backend.md  get-started-h100-training.md
docs/reference/: system-requirements.md  technical_diagram.md
evaluation/: run_adapter_gate.py  run_quality_suite.py
evaluation/prompts/: sample_prompts.jsonl
scripts/: check_llm_readiness.py  llm_canary_proxy.py  pull_hf_model.py  rollback_canary.sh  rollout_canary.sh  run_local_api.sh  run_vllm_server.py  start_backend_stack.sh  stop_backend_stack.sh
src/mira/: __init__.py  api.py  contract.py  guardrails.py  llm_client.py  schema.py  settings.py
tests/: test_adapter_gate.py  test_api.py  test_guardrails.py  test_llm_client.py  test_schema.py  test_settings.py
training/: README.md
training/configs/: qlora_h100.yaml
training/data/: sample_outcomes.csv
training/scripts/: build_dataset.py  merge_lora_adapter.py  prepare_hf_dataset.py  run_full_pipeline.sh  score_outcomes.py  train_lora_adapter.py  train_structured_model.py
